<resources>
    <string name="app_name">Halısahadayım</string>
    <string name="ilgiriniz">"İl giriniz"</string>
    <string name="ilcegiriniz">"İlçe giriniz"</string>
    <string name="telno">"Telno giriniz"</string>
    <string name="emailgiriniz">"Email giriniz"</string>
    <string name="ss">"SS ALABİLİRSİNİZ"</string>
    <string name="sifre">"Şifre giriniz"</string>
    <string name="oyuncu1">"1.oyuncu"</string>
    <string name="oyuncu2">"2.oyuncu"</string>
    <string name="taktikk">"TAKTİK YAP"</string>
    <string name="ÇİZİMİTEMİZLE">"ÇİZİMİ TEMİZLE"</string>
    <string name="oyuncu3">"3.oyuncu"</string>
    <string name="oyuncu4">"4.oyuncu"</string>
    <string name="oyuncu5">"5.oyuncu"</string>
    <string name="Oyuncu">"OYUNCU EKLE"</string>
    <string name="cıkısyap">"Çıkış yap"</string>
    <string name="oyuncu6">"6.oyuncu"</string>
    <string name="oyuncu7">"7.oyuncu"</string>
    <string name="oyuncu8">"8.oyuncu"</string>
    <string name="yas">"Yaş"</string>
    <string name="Emaill">"Email giriniz"</string>
    <string name="Şifree">"Şifre giriniz"</string>
    <string name="girişyap">"GİRİŞ YAP"</string>
    <string name="oyuncu9">"9.oyuncu"</string>
    <string name="Uygunsaat">"Uygun olunan zamanlar"</string>
    <string name="oturum">"Beni hatırla"</string>
    <string name="mevki">"Mevki giriniz"</string>
    <string name="Halısaha">"HALISAHADAYIM"</string>
    <string name="oyuncu10">"10.oyuncu"</string>
    <string name="oyuncu11">"11.oyuncu"</string>
    <string name="maçekle">"MAÇ EKLE"</string>
    <string name="hesap">"HESABIN VAR MI ? GİRİŞ YAP :)"</string>
    <string name="OYUNCUEKLE">"OYUNCU EKLE"</string>
    <string name="macbul">"MAÇ BUL"</string>
    <string name="KAYITOL">"KAYIT OL"</string>
    <string name="kaydet">"Kaydet"</string>
    <string name="saatgiriniz">"Saat giriniz"</string>
    <string name="İsimvesoiyisi">"İsim ve soyisim giriniz"</string>
    <string name="tarihgiriniz">"Tarih giriniz"</string>
    <string name="eksikgiriniz">"Eksik Mevkileri giriniz"</string>
    <string name="EkranıTemizle">"Çizimi temizle"</string>
    <string name="oyuncubul">"OYUNCU BUL"</string>
    <string name="iletisim">"İLETİŞİM VE UYGULAMA HAKKINDA"</string>
    <string name="TAKTİKYAP">"TAKTİK YAP"</string>
    <string name="KADROKUR">"KADRO KUR"</string>
    <string name="ilet1">"Uygulama,halısahadaki eksikleri gidermek amacıyla yapılmıştır.Oyuncu ekle menüsüyle kendinizi ekleyebilir,maç ekle menüsüyle eksik kadronuzu tamamlamak amacıyla maçın özelliklerini girip kaydedebilirsiniz.Oyuncu bul menüsüyle maçınıza belli kriterde oyuncu bulabilir,maç bul menüsüyle kendinize halı sahada maç bulabilirsiniz."</string>
    <string name="ilet2">"İletişim=halsahadaym@gmail.com"</string>
    <string name="website">"Web site: www.halisahadayim.net"</string>
    <string name="ilet3">"!!Girilen bilgiyi sildirmek için!!"</string>
    <string name="ilet4">"Yukarda verilen email hesabına silinmesini istediğiniz bilginin fotoğrafını atmanız yeterlidir."</string>
</resources>