<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bowling_green_seed"
    tools:context=".KADROKUR">

    <EditText
        android:id="@+id/editText17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:importantForAutofill="no"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/oyuncu1"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:importantForAutofill="no"
        android:hint="@string/oyuncu2"
    android:textColor="#ffffff"
    android:textColorHint="#ffffff"
    android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/editText17"
        app:layout_constraintTop_toBottomOf="@+id/editText17" />

    <EditText
        android:id="@+id/editText19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/oyuncu3"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:importantForAutofill="no"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/editText18"
        app:layout_constraintTop_toBottomOf="@+id/editText18" />

    <EditText
        android:id="@+id/editText20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:hint="@string/oyuncu4"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/editText19"
        app:layout_constraintTop_toBottomOf="@+id/editText19" />

    <EditText
        android:id="@+id/editText21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/oyuncu5"
        android:textColor="#ffffff"
        android:importantForAutofill="no"
        android:textColorHint="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/editText20"
        app:layout_constraintTop_toBottomOf="@+id/editText20" />

    <EditText
        android:id="@+id/editText22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:importantForAutofill="no"
        android:hint="@string/oyuncu6"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/editText21"
        app:layout_constraintTop_toBottomOf="@+id/editText21" />

    <EditText
        android:id="@+id/editText23"
        android:layout_width="wrap_content"
        android:importantForAutofill="no"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/oyuncu7"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/editText22"
        app:layout_constraintTop_toBottomOf="@+id/editText22" />

    <EditText
        android:id="@+id/editText24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/oyuncu8"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/editText23"
        app:layout_constraintTop_toBottomOf="@+id/editText23" />

    <EditText
        android:id="@+id/editText25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:hint="@string/oyuncu9"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/editText24"
        app:layout_constraintTop_toBottomOf="@+id/editText24" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="74dp"
        android:text="@string/ss"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>