<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bowling_green_seed"
    tools:context=".GİRİSMENU">

    <Button
        android:id="@+id/button61"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
android:gravity="center"
        android:layout_width="300dp"

        android:layout_height="50dp"
        android:layout_marginTop="60dp"

        android:background="@drawable/search_layout"
        android:text="@string/maçekle"

        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/button62"
        android:layout_width="300dp"
        android:gravity="center"
        android:layout_height="50dp"

        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/search_layout"
        android:text="@string/macbul"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/button63"
        android:layout_width="300dp"
        android:gravity="center"
        android:layout_height="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/search_layout"
        android:text="@string/oyuncubul"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
         />

    <Button
        android:id="@+id/button64"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="220dp"
        android:background="@drawable/search_layout"
        android:text="@string/OYUNCUEKLE"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
         />

    <Button
        android:id="@+id/button11"
        android:layout_width="300dp"

        android:layout_height="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="460dp"

        android:background="@drawable/search_layout"
        android:gravity="center"
        android:text="@string/KADROKUR"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button75"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"

        android:layout_width="300dp"

        android:layout_height="50dp"
        android:layout_marginTop="540dp"

        android:background="@drawable/search_layout"
        android:text="@string/iletisim"
        android:gravity="center"

        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <Button

        android:id="@+id/button3"
        android:layout_width="300dp"

        android:layout_height="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="380dp"
        android:background="@drawable/search_layout"
        android:text="@string/TAKTİKYAP"

        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
         />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="300dp"

        android:layout_height="50dp"

        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"

        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3058256649555601/1958136932"
        ></com.google.android.gms.ads.AdView>


</RelativeLayout>