<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bowling_green_seed"
    tools:context=".girisyap">

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="194dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/Emaill"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="#ffffff"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"



        android:layout_marginTop="244dp"
        android:ems="10"
        android:hint="@string/Şifree"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="#ffffff"
        android:textStyle="bold"
     />

    <Button
        android:id="@+id/buttongiris"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginLeft="75dp"
        android:layout_marginRight="75dp"
        android:layout_marginTop="350dp"

        android:background="@drawable/search_layout2"
        android:text="@string/girişyap"
        />


</RelativeLayout>